--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,12 @@
-/*
-COLORS:
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+// varialbles
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
 
-*/
+$color-gery-dark: #777;
+$color-white: #fff;
+// ===============
 
 *,
 *::after, 
@@ -21,8 +22,8 @@ html {
 
 body {
     font-family: "Lato", sans-serif;
-    /* font-size: 1.6rem; */
-    color: #777;
+    font-size: 1.6rem;
+    color: $color-gery-dark;
     font-weight: 400;
     line-height: 1.7;
     padding: 3rem;
@@ -31,7 +32,9 @@ body {
 
 .header {
     height: 95vh;
-    background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 131, 0.8)),
+    background-image: linear-gradient(to right bottom,
+     rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)),
      url('../img/hero.jpg');
     background-size: cover;
     background-position: top;
@@ -59,7 +62,7 @@ body {
 
 
 .heading-primary{
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 3rem;
@@ -149,8 +152,8 @@ body {
 }
 
 .btn--white {
-    background-color: #fff;
-    color: #777;
+    background-color: $color-white;
+    color: $color-gery-dark;
     border-radius: 100px;
 }
 
@@ -168,7 +171,7 @@ body {
 }
 
 .btn--white::after{
-    background-color: #fff;
+    background-color: $color-white;
 }
 
 .btn:hover::after{
@@ -185,3 +188,17 @@ body {
 
 
 
+// media queries
+@media (max-width: 480px){
+    html{
+        font-size: 30%;
+    }
+
+    body{
+        padding: 0;
+    }
+
+    .btn:link{
+        font-size: 4rem;
+    }
+}
