--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,14 @@
+@import "base/base";
 
-// varialbles
+
+// variables
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
 $color-gery-dark: #777;
 $color-white: #fff;
+$color-black: #000;
 // ===============
 
 *,
@@ -40,24 +43,25 @@ body {
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
     position: relative;
-}
 
-.header__logo-box{
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-}
+    &__logo-box{
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
 
-.header__logo{
-    height: 3.5rem;
-}
+    &__logo{
+        height: 3.5rem;
+    }
 
-.header__text-box{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    &__text-box{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
 }
 
 
@@ -66,22 +70,22 @@ body {
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 3rem;
-}
 
-.heading-primary--main{
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 1s ease-out;
-}
+    &--main{
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation: moveInLeft 1s ease-out;
+    }
 
-.heading-primary--sub{
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.74rem;
-    animation: moveInRight 1s ease-out;
+    &--sub{
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.74rem;
+        animation: moveInRight 1s ease-out;
+    }
 }
 
 /* Animations =============================================== */
@@ -130,60 +134,65 @@ body {
     }
 }
 /* ========================================================== */
-.btn:link,
-.btn:visited{
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    transition: all .1s;
-    position: relative;
-    font-size: 1.6rem;
-}
 
-.btn:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-}
+.btn{
+    &:link,
+    &:visited{
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        transition: all .1s;
+        position: relative;
+        font-size: 1.6rem;
+    }
 
-.btn:active{
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .2);
-}
+    &:hover {
+        transform: translateY(-0.3rem);
+        box-shadow: 0 1rem 2rem rgba($color-black, .2);
 
-.btn--white {
-    background-color: $color-white;
-    color: $color-gery-dark;
-    border-radius: 100px;
-}
-
-.btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all .4s;
-}
-
-.btn--white::after{
-    background-color: $color-white;
-}
-
-.btn:hover::after{
-    transform: scale(1.4, 1.6);
-    opacity: 0;
-}
-
-
-.btn--animated{
-    animation: moveInBottom .5s ease-out .75s backwards;
+        &::after{
+            transform: scale(1.4, 1.6);
+            opacity: 0;
+        }
+    }
     
+    &:active{
+        transform: translateY(-0.1rem);
+        box-shadow: 0 0.5rem 1rem rgba($color-black, .2);
+    }
+    
+    &--white {
+        background-color: $color-white;
+        color: $color-gery-dark;
+        border-radius: 100px;
+
+        &::after{
+            background-color: $color-white;
+        }
+    }
+    
+    &::after {
+        content: "";
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 100px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition: all .4s;
+    }    
+
+    &--animated{
+        animation: moveInBottom .5s ease-out .75s backwards;
+        
+    }
 }
+
+
+
 
 
 
@@ -202,3 +211,4 @@ body {
         font-size: 4rem;
     }
 }
+// ======================================
